[workspace]
members = [ "fake-tornado" ]

[package]
name = "kansas"
version = "1.0.0"
authors = ["Alex Vandiver <alexmv@zulip.com>"]
edition = "2021"
exclude = ["fake-tornado/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arc-swap = "1.5.0"
bytes = "1.1.0"
clap = "3.1.18"
dashmap = "5.3.3"
env_logger = "0.9.0"
futures = "0.3.21"
humantime-serde = "1.1.1"
hyper = { version = "0.14.18", features = ["client", "server", "http1", "http2", "stream"] }
hyper-rustls = "0.23.0"
hyper-timeout = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = { version = "0.13.1", features = ["process"] }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tokio-test = "0.4.2"
toml = { version = "0.5.9", features = ["preserve_order"] }
url = "2.2.2"
