[package]
name = "fake-tornado"
version = "1.0.0"
authors = ["Alex Vandiver <alexmv@zulip.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
clap = "3.1.18"
env_logger = "0.9.0"
parking_lot = "0.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
